@@ -1,6 +1,9 @@
 shady-KISS-skin History
 -------------------------------------------
 
+2015-02-23:
+- Some cosmestics in tvguideng-recmenu
+
 2015-02-22:
 - Small fixes 
 - Fixed int-selector in tvguideng-recmenu
